--- a/index.html
+++ b/index.html
@@ -3,10 +3,138 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
+    <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-
-    <p>Репозиторий создан для обучения на интенсивном онлайн‑курсе «<a href="https://htmlacademy.ru/intensive/htmlcss">Базовый HTML и CSS</a>».</p>
-
+      <header>
+        <div class="container">
+                <img src="image/logo" alt="nёrds">
+                <nav class="main-navigation">
+                    <ul>
+                        <li>
+                            <a href="#">Студия</a>
+                        </li>
+                        <li>
+                            <a href="#">Клиенты</a>
+                        </li>
+                        <li>
+                            <a href="#">Магазин</a>
+                        </li>
+                        <li>
+                            <a href="#">Контакты</a>
+                        </li>
+                        <li>
+                            <a href="#">Контакты</a>
+                        </li>
+                    </ul>
+                </nav>
+                <div class="basket-block">
+                    <a class="basket" href="#">Корзина</a>
+                </div>
+              </div>
+      </header>
+      <main>
+        <div class="scroll">
+            <div class="scroll-image-1">
+                <b>Долго, дорого, скрупулезно</b>
+                <p>
+                    Математически выверенный дизайн
+                    <br>
+                    для вашего сайта или мобильного приложения
+                </p>
+                <a class="btn" href="#">Узнать больше</a>
+                <img src="#" alt="scroll-image-1">
+            </div>
+        </div>
+        <div class="products">
+            <article class="product">
+                <img src="#" alt="веб-сайты">
+                <h2>Веб-сайты</h2>
+                <p>
+                    Мир никогда не будет прежним
+                    <br>
+                    после того как увидит ваш сайт
+                </p>
+                <a class="btn web" href="#">Заказать</a>
+            </article>
+            <article class="product">
+                <img src="#" alt="приложения">
+                <h2>Приложения</h2>
+                <p>
+                    Покорите топ-10 приложений
+                    <br>
+                    в AppStrore и Google Play
+                </p>
+                <a class="btn apps" href="#">Заказать</a>
+            </article>
+             <article class="product">
+                <img src="#" alt="презентации">
+                <h2>Презентации</h2>
+                <p>
+                    Вы даже не подозреваете,
+                    <br>
+                    насколько вы изумительны!
+                </p>
+                <a class="btn presentaton" href="#">Заказать</a>
+            </article>
+          </div>
+          <section class="about-us">
+            <div class="us-1">
+                <b>
+                    Мы - маленькая, но гордая
+                    <br>
+                    дизайн-студия из Краснодара.
+                </b>
+                <p>
+                    Исповедуем принципы минимализма и чистоты. Ставим математический
+                    <br>
+                    расчет выше креатива. Работаем не покладая рук, как роботы.
+                </p>
+                Выполняем заказы на разработку:
+                <ul>
+                    <li>веб-сайтов любой сложности</li>
+                    <li>Мобильных приложений для iOS и Android</li>
+                    <li>Слайдшоу и видел для корпоративных презентаций</li>
+                </ul>
+            </div>
+            <div class="us-2">
+                <img src="#" alt="nёrd's since 2004">
+                Как мы работаем:
+                <ul>
+                    <li>С самоотдачей 146%</li>
+                    <li>Соблюдая сроки на 100%</li>
+                    <li>По предоплате 50%</li>
+                </ul>
+            </div>
+          </section>
+          <div class="clients">
+              <img src="#" alt="glukhanko">
+              <img src="#" alt="html academy">
+              <img src="#" alt="borodinski">
+          </div>
+          <footer>
+            <div class="container">
+                <img src="#" alt="map">
+                <div class="contacts">
+                    <b>Nёrds design studio</b>
+                    <br>
+                    191186, Санкт-Петербург,
+                    <br>
+                    ул. Б.Конюшечная, д. 19/8
+                    <br>
+                    Телефон: +7 (812) 275-75-75
+                    <a class="btn" href="#">Напишите нам</a>
+                </div>
+                <div class="footer-social">                    
+                    <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
+                    <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
+                    <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+                    <b>Давайте дружить, это выгодно!</b>
+                    <br>
+                    <p>Скидка 10% для друзей из социальных сетей</p>
+                </div>
+            </div>            
+        </footer>
+      </main>
   </body>
 </html>
