--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <link href="css/style.css" rel="stylesheet">
   </head>
   <body>
-      <header>
+      <header class="main-header">
         <div class="container">
-                <img src="image/logo" alt="nёrds">
+                <div class="logo">
+                    <img src="img/logo" alt="nёrds">
+                </div>
                 <nav class="main-navigation">
                     <ul>
                         <li>
@@ -33,85 +35,124 @@
                 </div>
               </div>
       </header>
-      <main>
-        <div class="scroll">
-            <div class="scroll-image-1">
-                <b>Долго, дорого, скрупулезно</b>
-                <p>
-                    Математически выверенный дизайн
-                    <br>
-                    для вашего сайта или мобильного приложения
-                </p>
-                <a class="btn" href="#">Узнать больше</a>
-                <img src="#" alt="scroll-image-1">
+      <main class="container content">
+          <div class="main-block">
+            <div class="scroll">
+                <div class="scroll-img-1">
+                    <div class="about">
+                        <b>Долго, дорого, скрупулезно</b>
+                        <p>
+                            Математически выверенный дизайн
+                            <br>
+                            для вашего сайта или мобильного приложения
+                        </p>
+                        <a class="btn" href="#">Узнать больше</a>
+                    </div>
+                    <div class="scroll-img">
+                        <img src="#" alt="scroll-image-1">
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="products">
-            <article class="product">
-                <img src="#" alt="веб-сайты">
-                <h2>Веб-сайты</h2>
-                <p>
-                    Мир никогда не будет прежним
-                    <br>
-                    после того как увидит ваш сайт
-                </p>
-                <a class="btn web" href="#">Заказать</a>
-            </article>
-            <article class="product">
-                <img src="#" alt="приложения">
-                <h2>Приложения</h2>
-                <p>
-                    Покорите топ-10 приложений
-                    <br>
-                    в AppStrore и Google Play
-                </p>
-                <a class="btn apps" href="#">Заказать</a>
-            </article>
-             <article class="product">
-                <img src="#" alt="презентации">
-                <h2>Презентации</h2>
-                <p>
-                    Вы даже не подозреваете,
-                    <br>
-                    насколько вы изумительны!
-                </p>
-                <a class="btn presentaton" href="#">Заказать</a>
-            </article>
+            <div class="products">
+                <article class="product">
+                    <div class="product-img">
+                        <img src="#" alt="веб-сайты">
+                    </div>
+                    <div class="product-about">
+                        <h2>Веб-сайты</h2>
+                        <p>
+                            Мир никогда не будет прежним
+                            <br>
+                            после того как увидит ваш сайт
+                        </p>
+                    </div>
+                    <div class="order-red">
+                        <a class="btn web" href="#">Заказать</a>
+                    </div>
+                </article>
+                <article class="product">
+                    <div class="product-img">
+                        <img src="#" alt="приложения">
+                    </div>
+                    <div class="product-about">
+                        <h2>Приложения</h2>
+                        <p>
+                            Покорите топ-10 приложений
+                            <br>
+                            в AppStrore и Google Play
+                        </p>
+                    </div>
+                    <div class="order-green">
+                        <a class="btn apps" href="#">Заказать</a>
+                    </div>
+                </article>
+                 <article class="product">
+                    <div class="product-img">
+                         <img src="#" alt="презентации">
+                    </div>
+                    <div class="product-about">
+                         <h2>Презентации</h2>
+                        <p>
+                            Вы даже не подозреваете,
+                            <br>
+                            насколько вы изумительны!
+                        </p>
+                     </div>
+                     <div class="order-yellow">
+                         <a class="btn presentaton" href="#">Заказать</a>
+                     </div>
+                </article>
+              </div>
+              <section class="about-us">
+                <div class="us-1">
+                    <div class="main-us">
+                        <b>
+                            Мы - маленькая, но гордая
+                            <br>
+                            дизайн-студия из Краснодара.
+                        </b>
+                        <p>
+                            Исповедуем принципы минимализма и чистоты. Ставим математический
+                            <br>
+                            расчет выше креатива. Работаем не покладая рук, как роботы.
+                        </p>
+                    </div>
+                    <div class="our products">
+                        Выполняем заказы на разработку:
+                        <ul>
+                            <li>веб-сайтов любой сложности</li>
+                            <li>Мобильных приложений для iOS и Android</li>
+                            <li>Слайдшоу и видел для корпоративных презентаций</li>
+                        </ul>
+                   </div> 
+                </div>
+                <div class="us-2">
+                    <div class="logo-since">
+                        <img src="#" alt="nёrd's since 2004">
+                    </div>
+                    <div class="our-works">
+                        <b>Как мы работаем:</b>
+                        <ul>
+                            <li>С самоотдачей 146%</li>
+                            <li>Соблюдая сроки на 100%</li>
+                            <li>По предоплате 50%</li>
+                        </ul>
+                    </div>
+                </div>
+              </section>
+              <div class="clients">
+                  <div class="clients-1">
+                    <img src="#" alt="glukhanko">
+                  </div>
+                  <div class="clients-2">
+                    <img src="#" alt="html academy">
+                  </div>
+                  <div class="clients-3">
+                    <img src="#" alt="borodinski">
+                  </div>
+              </div>
           </div>
-          <section class="about-us">
-            <div class="us-1">
-                <b>
-                    Мы - маленькая, но гордая
-                    <br>
-                    дизайн-студия из Краснодара.
-                </b>
-                <p>
-                    Исповедуем принципы минимализма и чистоты. Ставим математический
-                    <br>
-                    расчет выше креатива. Работаем не покладая рук, как роботы.
-                </p>
-                Выполняем заказы на разработку:
-                <ul>
-                    <li>веб-сайтов любой сложности</li>
-                    <li>Мобильных приложений для iOS и Android</li>
-                    <li>Слайдшоу и видел для корпоративных презентаций</li>
-                </ul>
-            </div>
-            <div class="us-2">
-                <img src="#" alt="nёrd's since 2004">
-                Как мы работаем:
-                <ul>
-                    <li>С самоотдачей 146%</li>
-                    <li>Соблюдая сроки на 100%</li>
-                    <li>По предоплате 50%</li>
-                </ul>
-            </div>
-          </section>
-          <div class="clients">
-              <img src="#" alt="glukhanko">
-              <img src="#" alt="html academy">
-              <img src="#" alt="borodinski">
-          </div>
+      </main>
           <footer>
             <div class="container">
                 <img src="#" alt="map">
@@ -134,7 +175,6 @@
                     <p>Скидка 10% для друзей из социальных сетей</p>
                 </div>
             </div>            
-        </footer>
-      </main>
+        </footer>      
   </body>
 </html>
