--- a/index.html
+++ b/index.html
@@ -35,30 +35,30 @@
                 </div>
               </div>
       </header>
-      <main class="container content">
-          <div class="main-block">
-            <div class="scroll">
-                <div class="scroll-img-1">
-                    <div class="about">
-                        <b>Долго, дорого, скрупулезно</b>
-                        <p>
-                            Математически выверенный дизайн
-                            <br>
-                            для вашего сайта или мобильного приложения
-                        </p>
-                        <a class="btn" href="#">Узнать больше</a>
-                    </div>
-                    <div class="scroll-img">
-                        <img src="#" alt="scroll-image-1">
-                    </div>
-                </div>
+    <div class="scroll">
+        <div class="scroll-img-1">
+            <div class="about">
+                <b>Долго, дорого, скрупулезно</b>
+                <p>
+                    Математически выверенный дизайн
+                    <br>
+                    для вашего сайта или мобильного приложения
+                </p>
+                <a class="btn" href="#">Узнать больше</a>
             </div>
-            <div class="products">
-                <article class="product">
-                    <div class="product-img">
+            <div class="scroll-img">
+                <img src="#" alt="scroll-image-1">
+            </div>
+        </div>
+      </div>
+      <main class="container content">
+          <div class="main-block">           
+            <div class="directions">
+                <article class="direction">
+                    <div class="direction-img">
                         <img src="#" alt="веб-сайты">
                     </div>
-                    <div class="product-about">
+                    <div class="direction-about">
                         <h2>Веб-сайты</h2>
                         <p>
                             Мир никогда не будет прежним
@@ -70,11 +70,11 @@
                         <a class="btn web" href="#">Заказать</a>
                     </div>
                 </article>
-                <article class="product">
-                    <div class="product-img">
+                <article class="direction">
+                    <div class="direction-img">
                         <img src="#" alt="приложения">
                     </div>
-                    <div class="product-about">
+                    <div class="direction-about">
                         <h2>Приложения</h2>
                         <p>
                             Покорите топ-10 приложений
@@ -86,11 +86,11 @@
                         <a class="btn apps" href="#">Заказать</a>
                     </div>
                 </article>
-                 <article class="product">
-                    <div class="product-img">
+                 <article class="direction">
+                    <div class="direction-img">
                          <img src="#" alt="презентации">
                     </div>
-                    <div class="product-about">
+                    <div class="direction-about">
                          <h2>Презентации</h2>
                         <p>
                             Вы даже не подозреваете,
@@ -167,13 +167,17 @@
                     <a class="btn" href="#">Напишите нам</a>
                 </div>
                 <div class="footer-social">                    
+                <div class="social-icon">
                     <a class="social-btn social-btn-vk" href="#">Вконтакте</a>
                     <a class="social-btn social-btn-fb" href="#">Фейсбук</a>
                     <a class="social-btn social-btn-inst" href="#">Инстаграм</a>
+                </div>    
+                <div class="social-tagline">
                     <b>Давайте дружить, это выгодно!</b>
                     <br>
                     <p>Скидка 10% для друзей из социальных сетей</p>
                 </div>
+            </div>
             </div>            
         </footer>      
   </body>
