--- a/index.html
+++ b/index.html
@@ -39,15 +39,31 @@
         <div class="scroll-img-1">
             <div class="about">
                 <b>Долго, дорого, скрупулезно</b>
-                <p>
-                    Математически выверенный дизайн
-                    <br>
-                    для вашего сайта или мобильного приложения
-                </p>
-                <a class="btn" href="#">Узнать больше</a>
+                <p>Математически выверенный дизайн для вашего сайта или мобильного приложения</p>
+                <a class="btn btn-red" href="#">Узнать больше</a>
             </div>
             <div class="scroll-img">
                 <img src="#" alt="scroll-image-1">
+            </div>
+        </div>
+        <div class="scroll-img-2">
+            <div class="about">
+                <b>Любите ли вы математику, как любим ее мы?</b>
+                <p>Нашим дизайнерам мы удаляем нейроны, ответственные за креатив, чтобы дать им возможность все просчитать</p>
+                <a class="btn btn-red" href="#">Узнать больше</a>
+            </div>
+            <div class="scroll-img">
+                <img src="#" alt="scroll-image-2">
+            </div>
+        </div>
+        <div class="scroll-img-3">
+            <div class="about">
+                <b>Только наркотики, только хардкор!</b>
+                <p>Все дизайнерские решения в нашей компании принимаются только под воздействием качественных галлюциногенов</p>
+                <a class="btn btn-red" href="#">Узнать больше</a>
+            </div>
+            <div class="scroll-img">
+                <img src="#" alt="scroll-image-3">
             </div>
         </div>
       </div>
@@ -66,8 +82,8 @@
                             после того как увидит ваш сайт
                         </p>
                     </div>
-                    <div class="order-red">
-                        <a class="btn web" href="#">Заказать</a>
+                    <div class="order">
+                        <a class="btn btn-red" href="#">Заказать</a>
                     </div>
                 </article>
                 <article class="direction">
@@ -82,8 +98,8 @@
                             в AppStrore и Google Play
                         </p>
                     </div>
-                    <div class="order-green">
-                        <a class="btn apps" href="#">Заказать</a>
+                    <div class="order">
+                        <a class="btn btn-green" href="#">Заказать</a>
                     </div>
                 </article>
                  <article class="direction">
@@ -98,8 +114,8 @@
                             насколько вы изумительны!
                         </p>
                      </div>
-                     <div class="order-yellow">
-                         <a class="btn presentaton" href="#">Заказать</a>
+                     <div class="order">
+                         <a class="btn btn-yellow" href="#">Заказать</a>
                      </div>
                 </article>
               </div>
@@ -164,7 +180,7 @@
                     ул. Б.Конюшечная, д. 19/8
                     <br>
                     Телефон: +7 (812) 275-75-75
-                    <a class="btn" href="#">Напишите нам</a>
+                    <a class="btn btn-red" href="#">Напишите нам</a>
                 </div>
                 <div class="footer-social">                    
                 <div class="social-icon">
