--- a/catalog-nerds.html
+++ b/catalog-nerds.html
@@ -35,13 +35,12 @@
                 </div>
         </div>
       </header>
-      <main class="container content">
-          <div class="main-block">
-            <h1>
-                Добро пожаловать в магазин
-                <br>
-                готовых макетов
-            </h1>
+      <div class="main-heading">
+          <div class="container">
+              <h1>Добро пожаловать в магазин готовых макетов!</h1>
+          </div>
+      </div>
+      <main class="container content">         
             <div class="products-filters">
                 <form class="filter" action="#" method="get">                    
                     <h2>Стоимость</h2>
